fix NaN% and alignment issues

--- a/resources/styles/components/question.less
+++ b/resources/styles/components/question.less
@@ -124,7 +124,6 @@
   }
 
   .answers-table {
-    font-size: 0.8em;
     width: 100%;
 
     .answers-answer {
