--- a/resources/styles/components/task-teacher-review/question.less
+++ b/resources/styles/components/task-teacher-review/question.less
@@ -10,14 +10,14 @@
       text-align: center;
       width: 80px;
       font-size: 2rem;
-      margin-top: 14px;
+      line-height: 2.4rem;
+      margin-top: 10px;
     }
 
     .selected-count {
       display: inline-block;
       width: 60px;
-      #fonts > .sans(1.8rem, 1.8rem);
-      margin-top: 11px;
+      margin-top: 9px;
 
       &::before {
         content: attr(data-count);
